<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/spring_wood_color"
    android:layout_height="match_parent"
    android:paddingTop="36dp">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        app:elevation="0dp"
        android:layout_height="wrap_content"
        android:background="@color/spring_wood_color"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            android:background="@color/spring_wood_color">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingStart="5dp"
                android:background="@color/spring_wood_color"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:navigationIconTint="@color/dark_slate_grey"
                app:layout_collapseMode="pin"
                tools:ignore="RtlSymmetry">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/toolbarTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_scan"
                        android:textColor="@color/dark_slate_grey"
                        android:textSize="24sp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/poppins_semibold"/>

                </LinearLayout>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="150dp">

            <TextView
                android:id="@+id/titleScanImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/dark_slate_grey"
                android:text="@string/title_scan_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/descScanImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_scan_image"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/soft_black"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/titleScanImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/uploadImageLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/descScanImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleUpload"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:textSize="20sp"
                        android:textColor="@color/dark_slate_grey"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/title_upload_image"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="24dp">

                        <ImageView
                            android:id="@+id/imgBox"
                            android:layout_width="match_parent"
                            android:layout_height="240dp"
                            android:scaleType="fitXY"
                            android:adjustViewBounds="true"
                            android:background="@drawable/dashed_rectangle"
                            android:layout_centerInParent="true"
                            android:contentDescription="@string/img_scan" />

                        <ImageView
                            android:id="@+id/iconImage"
                            android:layout_width="40dp"
                            android:layout_height="48dp"
                            android:layout_centerInParent="true"
                            android:contentDescription="@string/description_icon"
                            android:src="@drawable/ic_camera"
                            app:tint="@null" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        android:paddingBottom="24dp">

                        <Button
                            android:id="@+id/btnFromGallery"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/from_gallery_button"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:fontFamily="@font/poppins_semibold"
                            android:layout_marginBottom="12dp"
                            android:backgroundTint="@color/burnt_pink"
                            app:cornerRadius="10dp"/>

                        <Button
                            android:id="@+id/btnCamera"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAllCaps="false"
                            android:text="@string/camera_button"
                            android:textColor="@color/white"
                            android:fontFamily="@font/poppins_semibold"
                            android:backgroundTint="@color/burnt_pink"
                            app:cornerRadius="10dp"
                            />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/scanButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_button_enabled"
                android:text="@string/scan_button"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="64dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@+id/uploadImageLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>