<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/spring_wood_color"
    android:layout_height="match_parent"
    android:paddingTop="36dp">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        app:elevation="0dp"
        android:layout_height="wrap_content"
        android:background="@color/spring_wood_color"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            android:background="@color/spring_wood_color">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingStart="5dp"
                android:background="@color/spring_wood_color"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:navigationIconTint="@color/dark_slate_grey"
                app:layout_collapseMode="pin"
                tools:ignore="RtlSymmetry">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/toolbarTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_result_scan"
                        android:textColor="@color/dark_slate_grey"
                        android:textSize="24sp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/poppins_semibold"/>

                </LinearLayout>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="72dp">

            <ImageView
                android:id="@+id/imageResultScan"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/result_image_scan"
                android:src="@drawable/bg_carousel_2"
                android:scaleType="fitXY"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/diagnoseDiseaseScan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/diagnosis"
                android:textColor="@color/dark_slate_grey"
                app:layout_constraintTop_toBottomOf="@+id/imageResultScan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardDetailDiagnose"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:backgroundTint="@color/twilight_blue"
                android:layout_marginTop="8dp"
                style="?attr/materialCardViewFilledStyle"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/diagnoseDiseaseScan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_margin="24dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/checkIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/icon_skin_disease"
                        android:src="@drawable/ic_check_circle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/nameDiseaseScan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        android:gravity="start"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/title_disease_example"
                        android:textColor="@color/deep_sea_green"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/checkIcon" />

                    <TextView
                        android:id="@+id/accuracyDiseaseScan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:gravity="end"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/accuracy"
                        android:textColor="@color/deep_sea_green"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/btnToHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/history_button"
                android:layout_marginTop="64dp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold"
                android:backgroundTint="@color/burnt_pink"
                app:cornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@+id/cardDetailDiagnose"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
