<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    style="?attr/materialCardViewFilledStyle"
    android:backgroundTint="@color/white"
    android:layout_marginTop="8dp"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp"
    android:layout_marginBottom="8dp"
    app:cardElevation="0dp"
    app:cardForegroundColor="@android:color/transparent"
    app:strokeColor="@color/dark_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgCard"
            android:layout_width="105dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_carousel_1"
            android:contentDescription="@string/image_scan_history"
            app:shapeAppearanceOverlay="@style/RoundedImageView"
            app:layout_constraintStart_toStartOf="@+id/container"
            app:layout_constraintTop_toTopOf="@+id/container"
            app:layout_constraintBottom_toBottomOf="@+id/container"/>

        <TextView
            android:id="@+id/titleDisease"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/dark_slate_grey"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/title_disease_example"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/dateDisease"
            app:layout_constraintStart_toEndOf="@+id/imgCard"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/dateDisease"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/desc_disease_example"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="12sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="28dp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintTop_toBottomOf="@+id/titleDisease"
            app:layout_constraintStart_toEndOf="@+id/imgCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
